--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@ h3 { margin-bottom: 0px; }
     </style>
   </head>
   <body>
+    <h1>{{ page.title }}</h1>
     {{ content }}
   </body>
 </html>
