Centralized author information

--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -1,3 +1,3 @@
 <span class="author">
-  <a href="mailto:poretsky@mlbox.ru">{{ include.name }}</a>
+  <a href="mailto:{{ site.data.author.email }}">{{ include.name }}</a>
 </span>
